--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Undangan Pernikahan Wahyu & Riski</title>
-    <meta name="title" content="Undangan Pernikahan Wahyu & Riski">
-    <meta name="description" content="Website Undangan Pernikahan Wahyu & Riski Secara Online">
+    <title>Undangan Pernikahan Endah Lestari & Abdullah Shafi'i</title>
+    <meta name="title" content="Undangan Pernikahan Endah Lestari & Abdullah Shafi'i">
+    <meta name="description" content="Website Undangan Pernikahan Endah Lestari & Abdullah Shafi'i Secara Online">
     <link rel="icon" type="image/png" sizes="192x192" href="./assets/images/icon-192x192.png">
     <meta name="theme-color" content="#212529">
     <meta name="color-scheme" content="dark">
-    <meta property="og:title" content="Undangan Pernikahan Wahyu & Riski">
-    <meta property="og:description" content="Website Undangan Pernikahan Wahyu & Riski Secara Online">
-    <meta property="og:image" content="https://dewanakl.github.io/undangan/assets/images/bg.jpeg">
+    <meta property="og:title" content="Undangan Pernikahan Endah Lestari & Abdullah Shafi'i">
+    <meta property="og:description" content="Website Undangan Pernikahan Endah Lestari & Abdullah Shafi'i Secara Online">
+    <meta property="og:image" content="https://endahabdullah.github.io/undangan/assets/images/bg.jpeg">
     <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:alt" content="https://dewanakl.github.io/undangan/">
+    <meta property="og:image:alt" content="https://endahabdullah.github.io/undangan/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta property="og:site_name" content="Undangan">
-    <meta property="og:url" content="https://dewanakl.github.io/undangan/">
+    <meta property="og:url" content="https://endahabdullah.github.io/undangan/">
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin="anonymous">
     <link rel="preconnect" href="https://undangan-api-gules.vercel.app" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
@@ -78,9 +78,9 @@
                         <img src="assets/images/bg.jpeg" alt="bg" onclick="modalFoto(this)">
                     </div>
                 </div>
-                <h1 class="font-estetik my-4" style="font-size: 3rem;">Wahyu & Riski</h1>
+                <h1 class="font-estetik my-4" style="font-size: 3rem;">Endah Lestari & Abdullah Shafi'i</h1>
                 <h4>Rabu, 15 Maret 2023</h4>
-                <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Wahyu%20and%20Riski&details=The%20Wedding%20of%20Wahyu%20and%20Riski%20%7C%2015%20Maret%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
+                <a class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2" target="_blank" href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Endah Lestari%20and%20Abdullah Shafi'i&details=The%20Wedding%20of%20Endah Lestari%20and%20Abdullah Shafi'i%20%7C%2015%20Maret%202023%20%7C%20RT%2010%20RW%2002,%20Desa%20Pajerukan,%20Kec.%20Kalibagor,%20Kab.%20Banyumas,%20Jawa%20Tengah%2053191%20%7C%2010.00%20-%2011.00%20WIB&dates=20230315T100000/20230315T110000&location=https://goo.gl/maps/ALZR6FJZU3kxVwN86">
                     <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
                 </a>
                 <div class="d-flex justify-content-center align-items-center mt-4 mb-2">
@@ -111,7 +111,7 @@
                         <div class="cropper border border-3 border-light shadow my-4 mx-auto">
                             <img src="assets/images/cowo.png" alt="bg" onclick="modalFoto(this)">
                         </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Wahyu Siapa</h1>
+                        <h1 class="font-estetik" style="font-size: 3rem;">Endah Lestari Siapa</h1>
                         <h5 class="mt-3 mb-0">Putra</h5>
                         <p class="mb-0">Bapak ... & Ibu ...</p>
                     </div>
@@ -122,7 +122,7 @@
                         <div class="cropper border border-3 border-light shadow my-4 mx-auto">
                             <img src="assets/images/cewe.png" alt="bg" onclick="modalFoto(this)">
                         </div>
-                        <h1 class="font-estetik" style="font-size: 3rem;">Riski Siapa</h1>
+                        <h1 class="font-estetik" style="font-size: 3rem;">Abdullah Shafi'i Siapa</h1>
                         <h5 class="mt-3 mb-0">Putri</h5>
                         <p class="mb-0">Bapak ... & Ibu ...</p>
                     </div>
@@ -388,12 +388,12 @@
                     <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                         <div class="col-auto">
                             <small class="text-light">
-                                Build with<i class="fa-solid fa-heart mx-1"></i>Dewanakl
+                                Build with<i class="fa-solid fa-heart mx-1"></i>endahabdullah
                             </small>
                         </div>
                         <div class="col-auto">
                             <small>
-                                <i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/dewanakl/undangan">dewanakl</a>
+                                <i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/endahabdullah/undangan">endahabdullah</a>
                             </small>
                         </div>
                     </div>
@@ -438,7 +438,7 @@
                         <div class="cropper border border-3 border-light shadow mb-4 mx-auto">
                             <img src="assets/images/bg.jpeg" alt="bg">
                         </div>
-                        <h1 class="font-estetik my-4" style="font-size: 2.5rem;">Wahyu & Riski</h1>
+                        <h1 class="font-estetik my-4" style="font-size: 2.5rem;">Endah Lestari & Abdullah Shafi'i</h1>
                         <div id="namatamu"></div>
                         <button type="button" class="btn btn-light shadow rounded-4 mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="buka()">
                             <i class="fa-solid fa-envelope-open me-2"></i>Buka Undangan
